Custom ranks + db improvements